# specify_darwincore_etl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: entomology-config.yml  geosciences-config.yml
etl/: config_schema.py  exceptions.py  extract.py  load.py  logging_config.py  patches.py  transform.py
tests/unit/: test_config.py  test_extract.py
